--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -14,6 +14,7 @@
     --background-color: #0A0A0A;
     --color-primary: #D9D9D9;
     --color-text: #D9D9D9;
+    --color-text-active: #FFFFFF;
     --color-text-muted: #999999;
     --color-accent: #999999;
     --background-color-secondary: #111111;
@@ -112,6 +113,10 @@ button > img {
     border-radius: 4rem;
 }
 
+.filled-button:hover {
+    background-color: var(--color-text-active);
+}
+
 .ghost-button {
     background-color: transparent;
     border: 1px solid var(--stroke-color-primary);
@@ -129,10 +134,18 @@ button > img {
     border: none;
 }
 
+.text-button:hover {
+    color: var(--color-text-active) !important;
+}
+
 .toggle-button {
     background-color: transparent;
     border: none;
     color: var(--color-text);
+}
+
+.toggle-button:hover {
+    color: var(--color-text-active);
 }
 
 @media screen and (min-width: 580px) {
