--- a/frontend/css/landing-page.css
+++ b/frontend/css/landing-page.css
@@ -88,6 +88,6 @@ main {
 @media screen and (min-width: 950px) {
     #search-bar {
         position: static;
-        width: 700px;
+        width: 50rem;
     }
 }
