--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -18,6 +18,7 @@
     --color-text-muted: #999999;
     --color-accent: #999999;
     --background-color-secondary: #111111;
+    --background-color-tertiary: #3C3C3C;
     --stroke-color-primary: #3C3C3C;
     --spacing-xss: 0.5rem;
     --spacing-xs: 0.75rem;
